jobhunter/src/main/java/com/example/jobhunter/utils/errors/PermissionException.java
package com.example.jobhunter.utils.errors;

public class PermissionException extends Exception {
    public PermissionException(String message) {
        super(message);
    }
}
